dll/serialunix/libnserial/nserial.h


struct serialhandle;
NSERIAL_EXPORT const char *WINAPI serial_version();
NSERIAL_EXPORT struct serialhandle *WINAPI serial_init();
NSERIAL_EXPORT void WINAPI serial_terminate(struct serialhandle *handle);
NSERIAL_EXPORT int WINAPI serial_setdevicename(struct serialhandle *handle, const char *device);
NSERIAL_EXPORT const char *WINAPI serial_getdevicename(struct serialhandle *handle);
NSERIAL_EXPORT int WINAPI serial_open(struct serialhandle *handle);
NSERIAL_EXPORT int WINAPI serial_getproperties(struct serialhandle *handle);
NSERIAL_EXPORT int WINAPI serial_setproperties(struct serialhandle *handle);
NSERIAL_EXPORT int WINAPI serial_close(struct serialhandle *handle);
NSERIAL_EXPORT const char *WINAPI serial_error(struct serialhandle *handle);
NSERIAL_EXPORT int WINAPI serial_isopen(struct serialhandle *handle, int *isopen);
NSERIAL_EXPORT int WINAPI serial_setbaud(struct serialhandle *handle, int baud);
NSERIAL_EXPORT int WINAPI serial_getbaud(struct serialhandle *handle, int *baud);
NSERIAL_EXPORT int WINAPI serial_setdatabits(struct serialhandle *handle, int databits);
NSERIAL_EXPORT int WINAPI serial_getdatabits(struct serialhandle *handle, int *databits);
typedef enum serialparity {
  NOPARITY = 0,    
  ODD = 1,     
  EVEN = 2,    
  MARK = 3,    
  SPACE = 4,   
} serialparity_t;
NSERIAL_EXPORT int WINAPI serial_setparity(struct serialhandle *handle, serialparity_t parity);
NSERIAL_EXPORT int WINAPI serial_getparity(struct serialhandle *handle, serialparity_t *parity);
typedef enum serialstopbits {
  ONE = 0,     
  ONE5 = 1,    
  TWO = 2,     
} serialstopbits_t;
NSERIAL_EXPORT int WINAPI serial_setstopbits(struct serialhandle *handle, serialstopbits_t stopbits);
NSERIAL_EXPORT int WINAPI serial_getstopbits(struct serialhandle *handle, serialstopbits_t *stopbits);
typedef enum serialhandshake {
  NOHANDSHAKE = 0,            
  XON = 1,                    
  RTS = 2,                    
  DTR = 4,                    
  RTSXON = RTS | XON,         
  DTRXON = DTR | XON,         
  DTRRTS = DTR | RTS,         
  DTRRTSXON = DTR | RTS | XON 
} serialhandshake_t;
NSERIAL_EXPORT int WINAPI serial_sethandshake(struct serialhandle *handle, serialhandshake_t handshake);
NSERIAL_EXPORT int WINAPI serial_gethandshake(struct serialhandle *handle, serialhandshake_t *handshake);
NSERIAL_EXPORT int WINAPI serial_settxcontinueonxoff(struct serialhandle *handle, int txcontinueonxoff);
NSERIAL_EXPORT int WINAPI serial_gettxcontinueonxoff(struct serialhandle *handle, int *txcontinueonxoff);
NSERIAL_EXPORT int WINAPI serial_setdiscardnull(struct serialhandle *handle, int discardnull);
NSERIAL_EXPORT int WINAPI serial_getdiscardnull(struct serialhandle *handle, int *discardnull);
NSERIAL_EXPORT int WINAPI serial_setxonlimit(struct serialhandle *handle, int xonlimit);
NSERIAL_EXPORT int WINAPI serial_getxonlimit(struct serialhandle *handle, int *xonlimit);
NSERIAL_EXPORT int WINAPI serial_setxofflimit(struct serialhandle *handle, int xofflimit);
NSERIAL_EXPORT int WINAPI serial_getxofflimit(struct serialhandle *handle, int *xofflimit);
NSERIAL_EXPORT int WINAPI serial_setparityreplace(struct serialhandle *handle, int parityreplace);
NSERIAL_EXPORT int WINAPI serial_getparityreplace(struct serialhandle *handle, int *parityreplace);
typedef enum serialevent {
  NOEVENT = 0,            
  READEVENT = 1,          
  WRITEEVENT = 2,         
  READWRITEEVENT = 3      
} serialevent_t;
NSERIAL_EXPORT serialevent_t WINAPI serial_waitforevent(struct serialhandle *handle, serialevent_t event, int timeout);
NSERIAL_EXPORT int WINAPI serial_abortwaitforevent(struct serialhandle *handle);
NSERIAL_EXPORT ssize_t WINAPI serial_read(struct serialhandle *handle, char *buffer, size_t length);
NSERIAL_EXPORT ssize_t WINAPI serial_write(struct serialhandle *handle, const char *buffer, size_t length);
NSERIAL_EXPORT int WINAPI serial_getdcd(struct serialhandle *handle, int *dcd);
NSERIAL_EXPORT int WINAPI serial_getri(struct serialhandle *handle, int *ri);
NSERIAL_EXPORT int WINAPI serial_getdsr(struct serialhandle *handle, int *dsr);
NSERIAL_EXPORT int WINAPI serial_getcts(struct serialhandle *handle, int *cts);
NSERIAL_EXPORT int WINAPI serial_setdtr(struct serialhandle *handle, int dtr);
NSERIAL_EXPORT int WINAPI serial_getdtr(struct serialhandle *handle, int *dtr);
NSERIAL_EXPORT int WINAPI serial_setrts(struct serialhandle *handle, int rts);
NSERIAL_EXPORT int WINAPI serial_getrts(struct serialhandle *handle, int *rts);
typedef enum serialmodemevent {
  MODEMEVENT_NONE = 0,   
  MODEMEVENT_DCD = 1,    
  MODEMEVENT_RI = 2,     
  MODEMEVENT_DSR = 4,    
  MODEMEVENT_CTS = 8,    
} serialmodemevent_t;
NSERIAL_EXPORT serialmodemevent_t WINAPI serial_waitformodemevent(struct serialhandle *handle, serialmodemevent_t event);
NSERIAL_EXPORT int WINAPI serial_abortwaitformodemevent(struct serialhandle *handle);
NSERIAL_EXPORT int WINAPI serial_setbreak(struct serialhandle *handle, int breakstate);
NSERIAL_EXPORT int WINAPI serial_getbreak(struct serialhandle *handle, int *breakstate);